# Auto-Capture-Pair

./: README.md  build_macos.sh  package.json  pnpm-lock.yaml  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: idevice_helpers.rs  lib.rs  main.rs  pairing.rs
src/pages/: AboutPage.jsx  HomePage.jsx  SettingsPage.jsx
