[package]
name = "auto-capture-pair"
version = "1.1.0"
description = "A Tauri App"
authors = ["halfeatentoast"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "auto_capture_pair_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
idevice = { version = "0.1.47", features = [
    "amfi",
    "pair",
    "usbmuxd",
    "installation_proxy",
    "afc",
    "house_arrest",
    "mobile_image_mounter",
    "tss",
] }
log = "0.4"
uuid = { version = "1.16", features = ["v4"] }
plist = "1.8.0"
env_logger = "0.11.8"
winapi = { version = "0.3", features = [
    "shellapi",
    "winuser",
    "synchapi",
    "processthreadsapi",
    "handleapi",
    "winbase",
] }
